[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Deck.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/poppins_20.tres" type="DynamicFont" id=2]

[node name="Deck" type="Control"]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
script = ExtResource( 1 )

[node name="TopCard" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 128, 128 )

[node name="DeckName" type="Label" parent="TopCard"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "My Deck"
align = 1
valign = 1
autowrap = true

[node name="Edit" type="Button" parent="."]
margin_left = 73.0
margin_right = 128.0
margin_bottom = 20.0
text = "Edit"

[connection signal="gui_input" from="TopCard" to="." method="_on_TopCard_gui_input"]
[connection signal="pressed" from="Edit" to="." method="_on_Edit_pressed"]
